--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,16 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
+# IntelliJ & Java Build Folders
+.idea/
+!.idea/misc.xml
+!.idea/modules.xml
 *.iml
-*.ipr
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# Maven build output
+target/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# Test results
+allure-results/
+test-output/
 
-### VS Code ###
-.vscode/
-
-### Mac OS ###
-.DS_Store
+# Logs & compiled classes
+*.log
+*.class
